zapata-dx/force-app/main/default/objects/Regla_Cobertura__c/Regla_Cobertura__c.object-meta.xml
<CustomObject>
    <description>Decision determinista de garantia por modelo y sistema. Plan seccion 6.3 y 6.4.</description>
    <label>Regla de cobertura</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Numero de regla</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reglas de cobertura</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>