zapata-dx/force-app/main/default/objects/Regla_Cobertura__c/fields/Activa__c.field-meta.xml
<CustomField>
    <fullName>Activa__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Evaluar_Cobertura_Garantia solo lee reglas activas.</description>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>