zapata-dx/force-app/main/default/objects/Regla_Cobertura__c/fields/Clave_Unica__c.field-meta.xml
<CustomField>
    <fullName>Clave_Unica__c</fullName>
    <description>Modelo + sistema + tipo de garantia. Impide cargar dos reglas activas que se contradigan para el mismo caso. La llena el proceso de carga.</description>
    <externalId>true</externalId>
    <label>Clave unica</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>