zapata-dx/force-app/main/default/objects/Regla_Cobertura__c/fields/Deducible__c.field-meta.xml
<CustomField>
    <fullName>Deducible__c</fullName>
    <description>Monto que paga el cliente por evento. La extendida tiene deducible; la basica no.</description>
    <label>Deducible por evento</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>