zapata-dx/force-app/main/default/objects/Regla_Cobertura__c/fields/Es_Extendida__c.field-meta.xml
<CustomField>
    <fullName>Es_Extendida__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Distingue la cobertura basica de fabrica del plan extendido opcional.</description>
    <label>Es garantia extendida</label>
    <type>Checkbox</type>
</CustomField>