zapata-dx/force-app/main/default/objects/Regla_Cobertura__c/fields/Km_Limite__c.field-meta.xml
<CustomField>
    <fullName>Km_Limite__c</fullName>
    <description>Kilometraje maximo cubierto. Se compara contra la lectura vigente.</description>
    <label>Km limite</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>