zapata-dx/force-app/main/default/objects/Regla_Cobertura__c/fields/Knowledge_Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Id__c</fullName>
    <description>Id semantico del articulo (plan 7.1), por ejemplo K_GARANTIA_TREN_MOTRIZ. No es un Id de Salesforce, por eso 80 y no 18 caracteres.</description>
    <label>Id de articulo Knowledge</label>
    <length>80</length>
    <type>Text</type>
</CustomField>