zapata-dx/force-app/main/default/objects/Regla_Cobertura__c/fields/Meses_Limite__c.field-meta.xml
<CustomField>
    <fullName>Meses_Limite__c</fullName>
    <description>Meses desde InstallDate del Asset que cubre la garantia.</description>
    <label>Meses limite</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>