zapata-dx/force-app/main/default/objects/Regla_Cobertura__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product2 al que aplica la regla.</description>
    <label>Modelo</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Reglas de cobertura</relationshipLabel>
    <relationshipName>Reglas_Cobertura</relationshipName>
    <type>Lookup</type>
</CustomField>