zapata-dx/force-app/main/default/objects/Regla_Cobertura__c/fields/Sin_Limite_Km__c.field-meta.xml
<CustomField>
    <fullName>Sin_Limite_Km__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cuando es verdadero, la cobertura solo depende de los meses. Evita inventar un kilometraje falso para representar &quot;sin limite&quot;.</description>
    <label>Sin limite de kilometraje</label>
    <type>Checkbox</type>
</CustomField>