zapata-dx/force-app/main/default/objects/Regla_Cobertura__c/fields/Sistema__c.field-meta.xml
<CustomField>
    <fullName>Sistema__c</fullName>
    <description>Sistema cubierto. Sigue la estructura del articulo de cobertura basica, que distingue electrico, chasis y corrosion.</description>
    <label>Sistema</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tren motriz</fullName>
                <default>true</default>
                <label>Tren motriz</label>
            </value>
            <value>
                <fullName>Electrico y electronica</fullName>
            </value>
            <value>
                <fullName>Cabina</fullName>
            </value>
            <value>
                <fullName>Chasis y estructura</fullName>
            </value>
            <value>
                <fullName>Frenos</fullName>
            </value>
            <value>
                <fullName>Refrigeracion</fullName>
            </value>
            <value>
                <fullName>Corrosion</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>