zapata-dx/force-app/main/default/objects/Regla_Cobertura__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Version visible en la traza y en Log_Agente__c.Policy_Version__c.</description>
    <label>Version de regla</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>