zapata-dx/force-app/main/default/objects/Regla_Cobertura__c/fields/Vigencia_Odometro_Dias__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_Odometro_Dias__c</fullName>
    <description>Umbral documentado de vigencia de la lectura. Si se excede, la accion devuelve REQUIERE_DATO.</description>
    <label>Vigencia de odometro (dias)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>