zapata-dx/force-app/main/default/objects/Regla_Cobertura__c/validationRules/Vigencia_Odometro_Razonable.validationRule-meta.xml
<ValidationRule>
    <fullName>Vigencia_Odometro_Razonable</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Vigencia_Odometro_Dias__c &lt; 1, Vigencia_Odometro_Dias__c &gt; 365)</errorConditionFormula>
    <errorDisplayField>Vigencia_Odometro_Dias__c</errorDisplayField>
    <errorMessage>La vigencia del odometro debe estar entre 1 y 365 dias.</errorMessage>
</ValidationRule>