zapata-dx/force-app/main/default/objects/Regla_Cobertura__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Modelo__c</columns>
    <columns>Sistema__c</columns>
    <columns>Meses_Limite__c</columns>
    <columns>Km_Limite__c</columns>
    <columns>Version__c</columns>
    <columns>Activa__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>